# micro-shop

./: pyproject.toml
