[tool.poetry]
name = "micro-shop"
version = "0.1.0"
description = ""
authors = ["Daniyar"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.109.2"}
uvicorn = {extras = ["standard"], version = "^0.27.1"}
pydantic = {extras = ["email"], version = "^2.6.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.27"}
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
